Fix BlockEffect configs & move some BEs to config format